welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: '<-' expected but ')' found.
  for (i<= 0 to taille-1){
                        ^Array1:9: error: illegal start of simple expression
} 
^