welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var taille = getMondeHauteur()
  var T = new array[Color](taille)
  for (i<= 0 to taille-1){
    T(i)=getCouleurSol()
    avance()
  }
}